@@ -4,6 +4,7 @@
 void ops_detach(int);
 void ops_printsiginfo(void);
 void ops_resume(void);
+void ops_suspend(void);
 void ops_threadupdate(void);
 
 #endif
